--- a/suspended_coffees.html
+++ b/suspended_coffees.html
@@ -82,6 +82,10 @@
                         too bad, you can sit there, sipping a coffee and enjoying the view of the recently reopened
                         park.
                     </p>
+                    <figure>
+                    <img class='pure-img-responsive' src='Graphics/brodies.jpg'>
+                    <figcaption class='imgCaption'>Brodies Coffee, in the Gorsedd Gardens</figcaption>
+                </figure>
                     <p>
                         In the years working at Brodies, Ian has witnessed the city change. “We’ve been in the Gardens
                         for almost three years now. Sometimes, a homeless person would come, and I would offer him a hot
@@ -135,12 +139,16 @@
                     <p>
                         The <a href='https://littlemancoffee.co.uk/' target='_blank'>Little Man Coffee Co.</a>, on
                         Bridge street, offers its own special
-                        suspended coffee scheme. Rob, the owner, calls it “Suspended Coffee 2.0”.
+                        suspended coffee scheme. Rob Cooper, the owner, calls it <strong>“Suspended Coffee 2.0”</strong>.
                         “I’ve always seen The Little Man as a place where people can come to work and be creative. In
                         addition to the shop, we also have a space where groups and organisations hold meetings and
                         events. Many of them have been with us for two years, meeting every week… Our Suspended Coffee
                         was born for them.”
                     </p>
+                    <figure>
+                        <img src='Graphics/tlm.jpg' alt="The Little Man Coffee co.'s blackboard, where customers can mark the suspended coffees" class='pure-img-responsive'>
+                        <figcaption class='imgCaption'>The Little Man Coffee Co.</figcaption>
+                    </figure>
                     <p>
                         The Little Man’s Suspended Coffee 2.0 began in 2018. In principle, it works exactly as usual: a
                         customer donates a coffee and marks it on a big blackboard on the shop’s wall. The recipients,
