--- a/skills.html
+++ b/skills.html
@@ -521,7 +521,7 @@
 
 
                         <p>
-                            As many countries braces themselves for the impending <a
+                            As many countries brace themselves for the impending <a
                                 href='https://www.bbc.co.uk/news/business-47691078' target='_blank'>automation</a> boom,
                             retraining and
                             skills development will become an even bigger priority. This may be a red herring as the
@@ -596,7 +596,7 @@
 
                             Should the education system of Wales not engage with its future economy the
                             consequences will be dire. One doesn’t need an active imagination to envision
-                            this, merely imagine the problems of the 1980s become compounded by a new
+                            this, merely picture the problems of the 1980s become compounded by a new
                             generation.
 
                         </p>
