--- a/skills.html
+++ b/skills.html
@@ -332,7 +332,7 @@
                             href='https://neu.org.uk/press-releases/state-education-workload' target='_blank'>NEU</a>
                         reporting that only
                         11% of people currently working in the profession see themselves there in 5 years' time.
-                        Primary drivers of professional dissatisfaction in the profession are pay- and workload-related.
+                        Primary drivers of professional dissatisfaction in the profession are pay and workload-related.
                         NASUWT Cymru <a
                             href='https://www.nasuwt.org.uk/uploads/assets/uploaded/43d11eb0-b998-4d58-ac8d2f435292b104.pdf'
                             target='_blank'>reports
@@ -358,12 +358,12 @@
                         Government has chosen to prioritise health spending in our budget. That means that the
                         £1.2 billion cut in our budget has affected local government and schools.” However, the Welsh
                         Government is treading a fine line – budget cuts have led to large classroom sizes, despite
-                        the kindergarten legal limit of thirty students per class. The <a
+                        the kindergarten legal limit of thirty students per class. Last year the <a
                             href='https://www.walesonline.co.uk/news/education/schools-breaking-welsh-government-law-15177047'
                             target='_blank'>
                             number</a> of unlawfully large classes dropped from 27 cases across 23 schools, to 11 over
-                        11 – the average number of students per class in Wales has risen over the last five years
-                        to 25.6 from 25.1. It’s hard to see this improving given recent troubles in teacher
+                        11, however, the average number of students per class in Wales has risen over the last five years
+                        to 25.6 from 25.1. This can only compound recent troubles in teacher
                         recruitment reported by the sector.
                     </p>
                     <p>
@@ -371,7 +371,7 @@
                         studying in Wales. “I want to stay in Cardiff to study!” Says Mercy Taylor, a prospective
                         actor. “I suppose I am lucky Royal Welsh [College of performing arts] is local. If I didn’t
                         get an offer I still would have gone [to university] but, I don’t know if I would have if
-                        it was harder?” Mercy had the relative fortune of experience in her field, having had an
+                        it was harder?” Mercy Taylor had the relative fortune of experience in her field, having had an
                         active amateur acting career. “For others it may not have been easy. I had a bunch of ‘work’
                         on the internet from things I’d done for a laugh.” For Welsh students there can be help in
                         the form of the <a
