--- a/skills.html
+++ b/skills.html
@@ -178,7 +178,8 @@
                             target='_blank'>
                             ONS</a> data shows that Wales has the highest level of graduates working in non-graduate
                         roles
-                        at 20%. 27.7% of the 2017 cohort of Welsh university attendees would go on to jobs in England.
+                        at 20% in 2017. The overqualification rate has dropped since to
+                        has since dropped to <a href='https://www.ons.gov.uk/economy/nationalaccounts/uksectoraccounts/compendium/economicreview/april2019/overeducationandhourlywagesintheuklabourmarket2006to2017#conclusion' target='_blank'>14%</a>, however this is not due to productivity growth. 27.7% of the 2017 cohort of Welsh university attendees would go on to jobs in England. 
                     </p>
                     <p>
                         Looking at the representation of recent years' graduates from Welsh Universities alongside
