--- a/skills.html
+++ b/skills.html
@@ -305,7 +305,7 @@
                         early in foundational learning skills, schools can provide children with the ability to develop
                         independently. However, educational attainment in Wales has been historically amongst the lowest
                         amongst the UK’s home nations. A recent briefing from the <a
-                            href="file:///C:/Users/Shodan/Desktop/Digital%20Investigation/%E2%80%9Dhttps://www.jrf.org.uk/data/education-wales">Joseph
+                            href="https://www.jrf.org.uk/data/education-wales" target='_blank'>Joseph
                             Rowntree
                             Foundation</a> found that while the academic attainment gap in Wales is closing, this is due
                         to improved academic attainment by students receiving free meals. These children however are
@@ -463,7 +463,7 @@
                         strategy was devised (this would later become known as Digital Communities Wales). In a
                         relatively short amount of time significant gains have been made in digital literacy, but only
                         at the lowest level of understanding. 94% of survey respondents to a 2018 review of <a
-                            href='https://gov.wales/sites/default/files/statistics-and-research/2019-01/national-survey-wales-internet-use-digital-skills-2017-18.pdf%E2%80%9D'
+                            href='https://gov.wales/sites/default/files/statistics-and-research/2019-01/national-survey-wales-internet-use-digital-skills-2017-18.pdf'
                             target='_blank'>digital</a> skills had “managed information” (using search engines, downloading pictures) compared
                         to 61% who had used “problem solving” (such as watching self-help videos, or using customer
                         support). This number falls to 38% when considering “Creating” which includes form filling
