--- a/relative_poverty.html
+++ b/relative_poverty.html
@@ -71,8 +71,8 @@
 
         <div id="main">
             <div class="header">
-                <h1>Poverty</h1>
-                <h2>Here's a subtitle</h2>
+                <h1>Poverty by the numbers</h1>
+                <h2>Facts and figures</h2>
             </div>
 
             <div class="content">
