--- a/suspended_coffees.html
+++ b/suspended_coffees.html
@@ -68,8 +68,8 @@
 
         <div id="main">
             <div class="header">
-                <h1>Suspended Coffees</h1>
-                <h2>I'm bad at titles</h2>
+                <h1>Making a difference, one coffee at a time</h1>
+                <h2>How some local businesses decided to support Cardiff</h2>
             </div>
 
             <div class="content">
@@ -138,7 +138,7 @@
                         the community. Sometimes, these arise out of necessity.</p>
                     <p>
                         The <a href='https://littlemancoffee.co.uk/' target='_blank'>Little Man Coffee Co.</a>, on
-                        Bridge street, offers its own special
+                        Bridge Street, offers its own special
                         suspended coffee scheme. Rob Cooper, the owner, calls it <strong>“Suspended Coffee 2.0”</strong>.
                         “I’ve always seen The Little Man as a place where people can come to work and be creative. In
                         addition to the shop, we also have a space where groups and organisations hold meetings and
