--- a/big_issue.html
+++ b/big_issue.html
@@ -71,8 +71,8 @@
 
         <div id="main">
             <div class="header">
-                <h1>The Big Issue</h1>
-                <h2>I'm bad at titles</h2>
+                <h1>A life beyond "The Issue"</h1>
+                <h2>For The Big Issue Cymru, skills training is about much more than employability</h2>
             </div>
 
             <div class="content">
@@ -185,7 +185,12 @@
                         in work, <a href='relative_poverty.html' target='_blank'>according to StatsWales</a>.
                     </p>
 
-
+                    <figure>
+                        <img class='pure-img-responsive' src='Graphics/maurice.jpg'
+                            alt='Maurice, one of The Big Issue vendors'>
+                        <figcaption class='imgCaption'>Maurice, one of Cardiff's Big Issue vendors, lost his job after
+                            developing emphysema. At 57, with his health condition, it is very difficult for him to access the job market.</figcaption>
+                    </figure>
                     <p>
                         The Big Issue tries to fill this gap with its ordinary activities and with its pilot programmes.
                         For individuals who leave the job market due to various circumstances – like health or economic
@@ -236,6 +241,8 @@
                         financial constraints, soft skills programmes are typically the first to be slashed. The recent
                         increase in the number of people needing support has also put significant pressure on
                         organisations’ capabilities.
+                    </p>
+                    <p>
                         Pursuing a bespoke, holistic approach is certainly more expensive than simply shuffling people
                         through the system, explains Rebecca Jackson from Shelter Cymru. However, investing in an
                         intensive effort may prove more efficient in the long run. “I would argue that, in times of
