--- a/skills.html
+++ b/skills.html
@@ -462,9 +462,9 @@
                         literacy has been a Welsh Priority since the government commissions the 2010 Digital inclusion
                         strategy was devised (this would later become known as Digital Communities Wales). In a
                         relatively short amount of time significant gains have been made in digital literacy, but only
-                        at the lowest level of understanding. 94% of survey respondents to a 2018 review of <a
+                        at the lowest level of understanding. Survey respondents to a 2018 review of <a
                             href='https://gov.wales/sites/default/files/statistics-and-research/2019-01/national-survey-wales-internet-use-digital-skills-2017-18.pdf'
-                            target='_blank'>digital</a> skills had “managed information” (using search engines, downloading pictures) compared
+                            target='_blank'>digital</a> skills showed that in a given week, 94% had “managed information” (using search engines, downloading pictures) compared
                         to 61% who had used “problem solving” (such as watching self-help videos, or using customer
                         support). This number falls to 38% when considering “Creating” which includes form filling
                         (and thus applying for work).
