--- a/big_issue.html
+++ b/big_issue.html
@@ -144,7 +144,7 @@
                         opportunities. At one point, however, they realised it was not enough.</p>
                     <h2 class='content-subhead'>Beyond "The Issue": the Vendor Development Programme</h2>
                     <p>
-                        Lotty Talbut, Sales and outreach worker for Big Issue Cymru, spearheaded the launch of the
+                        Lotty Talbutt, Sales and outreach worker for Big Issue Cymru, spearheaded the launch of the
                         'Vendor Development Programme’, which piloted in 2018. The scheme provided participants with
                         opportunities to access education, skills training and work experience.
                     </p>
