--- a/skills.html
+++ b/skills.html
@@ -487,7 +487,7 @@
                             National Academy for Educational Leadership</a> in 2018. </p> <p>
 
                             Predicting where to place emphasis in the wider education system is easier said than
-                            done. In the Welsh David Hagendyk, director of the learning and Work institute said
+                            done. David Hagendyk, director of the Welsh Learning and Work institute said
                             “Skills and lifelong learning provision will become even more critical than before, even
                             more so for older members of society. The jobs we’re losing to automation will mostly
                             with the low skilled. The biggest employers are supermarkets – who mostly employ low
