--- a/skills.html
+++ b/skills.html
@@ -73,6 +73,7 @@
             <div class="header">
                 <h1>Skills and Education</h1>
                 <h2><em>A look at Cardiff</em></h2>
+                <p class="subtitle">Written by Aleks Ford, additional research by Giovanna Coi, and Hee-Eun Shin.  </p>
             </div>
 
             <div class="content">
