--- a/skills.html
+++ b/skills.html
@@ -72,7 +72,7 @@
         <div id="main">
             <div class="header">
                 <h1>Skills and Education</h1>
-                <h2><em>A look at Cardiff</em></h2>
+                <h2><em>Cardiff, a capital in stasis.</em></h2>
                 <p class="subtitle">Written by Aleks Ford, additional research by Giovanna Coi, and Hee-Eun Shin.  </p>
             </div>
 
