--- a/skills.html
+++ b/skills.html
@@ -164,7 +164,7 @@
                 <div id="us_Chart" class='pure-u-3-3'></div>
                 <br><br>
                 <div id="us_Text" class='pure-u-3-3 interlude'>
-                        <p class="source"><a href='https://statswales.gov.wales/Catalogue/Education-and-Skills/Post-16-Education-and-Training/Higher-Education/Destination-of-Leavers/welshdomiciledqualifiers-by-employmentstatus-locationofstudy' target="_blank">Sourced from Statswales</a></p>
+                        <p class="source">Source : <a href='https://statswales.gov.wales/Catalogue/Education-and-Skills/Post-16-Education-and-Training/Higher-Education/Destination-of-Leavers/welshdomiciledqualifiers-by-employmentstatus-locationofstudy' target="_blank">Statswales</a></p>
                     <p>
                         Welsh Universities are held in high esteem, both for the quality of education they provide to
                         their
@@ -301,7 +301,7 @@
                 </div>
                 <div id="cs_Chart"></div>
                 <div id="cs_Text" class='pure-u-3-3 interlude'>
-                    <p class="source"><a href='http://s3-eu-west-1.amazonaws.com/static.live.careerswales.net/MIS%20Individual%20LEA%20for%20companies%20Year%2013%202017.pdf' target="_blank">Sourced from Careerswales</a></p>
+                    <p class="source">Source :<a href='http://s3-eu-west-1.amazonaws.com/static.live.careerswales.net/MIS%20Individual%20LEA%20for%20companies%20Year%2013%202017.pdf' target="_blank">Careerswales</a></p>
                     <p>Primary and secondary education provide a pivotal role in educational development. By investing
                         early in foundational learning skills, schools can provide children with the ability to develop
                         independently. However, educational attainment in Wales has been historically amongst the lowest
@@ -426,7 +426,7 @@
                 </div>
                 <div id="ts_Chart"></div>
                 <div id="ts_Text" class='pure-u-3-3 interlude'>
-                    <p class='source'><a href='https://statswales.gov.wales/Catalogue/Education-and-Skills/Post-16-Education-and-Training/Further-Education-and-Work-Based-Learning/Learners/Further-Education/learningactivitiesfurthereducationinstitutions-by-sectorsubjectarea-domicile' target='_blank'>sourced from Statswales</a></p>
+                    <p class='source'>Source : <a href='https://statswales.gov.wales/Catalogue/Education-and-Skills/Post-16-Education-and-Training/Further-Education-and-Work-Based-Learning/Learners/Further-Education/learningactivitiesfurthereducationinstitutions-by-sectorsubjectarea-domicile' target='_blank'>Statswales</a></p>
                     <h3>Cardiff Area FE composition</h3>
                     <p>The Additional learning, non-traditional qualifications and vocational sectors of education are
                         oft overlooked in the greater context of educational performance. The majority of those in FE
@@ -453,7 +453,7 @@
                 <div id="ts_Chart2">
                 </div><br><br>
                 <div id="ts_Text2" class='pure-u-3-3 interlude'>
-                    <p class="source"> <a href='https://statswales.gov.wales/Catalogue/Education-and-Skills/Post-16-Education-and-Training/Further-Education-and-Work-Based-Learning/Learners/Further-Education/learningactivitiesfurthereducationinstitutions-by-subject-age' target="_blank">sourced from Statswales</a></p>
+                    <p class="source"> Sorce : <a href='https://statswales.gov.wales/Catalogue/Education-and-Skills/Post-16-Education-and-Training/Further-Education-and-Work-Based-Learning/Learners/Further-Education/learningactivitiesfurthereducationinstitutions-by-subject-age' target="_blank">Statswales</a></p>
                     <p>“I remember going to the classes but, if I'm honest. I don’t remember much else!” says John
                         Sullivan, from Tonypandy. John previously worked for a while at the Tower Colliery. After final
                         closure over ten years ago, John attempted to redevelop his skills. “The problem wasn’t my
@@ -515,7 +515,7 @@
                 <div class='pure-u-3-3'>
                     <div id="as_Chart"></div>
                     <div id="as_Text" class='pure-u-3-3 interlude'>
-                        <p class='source'><a href='https://statswales.gov.wales/Catalogue/Education-and-Skills/Post-16-Education-and-Training/Further-Education-and-Work-Based-Learning/Learners/Further-Education/learningactivitiesfurthereducationinstitutions-by-qualificationtype-age-gender' target='_blank'>sourced from Statswales</a></p>
+                        <p class='source'>Source : <a href='https://statswales.gov.wales/Catalogue/Education-and-Skills/Post-16-Education-and-Training/Further-Education-and-Work-Based-Learning/Learners/Further-Education/learningactivitiesfurthereducationinstitutions-by-qualificationtype-age-gender' target='_blank'>Statswales</a></p>
                         <p>Cardiff represents a hub of educational activity for Wales, and as such is emblematic for the
                             Welsh Government’s strategy for education and skills development. Despite the noble
                             intentions of the Higher Education act, Wales problems with skills are long-standing.
