--- a/suspended_coffees.html
+++ b/suspended_coffees.html
@@ -70,6 +70,7 @@
             <div class="header">
                 <h1>Making a difference, one coffee at a time</h1>
                 <h2>How some local businesses decided to support Cardiff</h2>
+                <p class="subtitle">Written by Giovanna Coi</p>
             </div>
 
             <div class="content">
