--- a/big_issue.html
+++ b/big_issue.html
@@ -72,7 +72,8 @@
         <div id="main">
             <div class="header">
                 <h1>A life beyond "The Issue"</h1>
-                <h2>For The Big Issue Cymru, skills training is about much more than employability</h2>
+                <h2>For The Big Issue Cymru, skills training is much more than employability</h2>
+                <p class="subtitle">Written by Giovanna Coi, additional reporting by Aleks Ford  </p>
             </div>
 
             <div class="content">
