Another image fix

--- a/big_issue.html
+++ b/big_issue.html
@@ -187,7 +187,7 @@
                     </p>
 
                     <figure>
-                        <img class='pure-img-responsive' src='Graphics/maurice.jpg'
+                        <img class='pure-img-responsive' src='Graphics/maurice.JPG'
                             alt='Maurice, one of The Big Issue vendors'>
                         <figcaption class='imgCaption'>Maurice, one of Cardiff's Big Issue vendors, lost his job after
                             developing emphysema. At 57, with his health condition, it is very difficult for him to access the job market.</figcaption>
