--- a/relative_poverty.html
+++ b/relative_poverty.html
@@ -342,7 +342,11 @@
                     </p>
 
                 </div>
-
+            <div class="pure-u-3-3 spine">
+                <button class="buttonspine" onclick="window.location.href= 'Index.html';">Back <br> To the homepage!</button>
+                <h4>Want to read more?</h4>
+                <button class="buttonspine" onclick="window.location.href= 'relative_poverty.html';">Forward <br> Housing in Cardiff!</button>
+                
             </div>
 
 
