--- a/relative_poverty.html
+++ b/relative_poverty.html
@@ -345,7 +345,7 @@
             <div class="pure-u-3-3 spine">
                 <button class="buttonspine" onclick="window.location.href= 'Index.html';">Back <br> To the homepage!</button>
                 <h4>Want to read more?</h4>
-                <button class="buttonspine" onclick="window.location.href= 'relative_poverty.html';">Forward <br> Housing in Cardiff!</button>
+                <button class="buttonspine" onclick="window.location.href= 'housing.html';">Forward <br> Housing in Cardiff!</button>
                 
             </div>
 
