--- a/housing.html
+++ b/housing.html
@@ -207,7 +207,11 @@
                         & Cabinet member Housing & Communities, Cardiff Council.
                     </p>
                 </div>
-
+                <div class="pure-u-3-3 spine">
+                    <button class="buttonspine" onclick="window.location.href= 'relative_poverty.html';">Back <br> Check the data!</button>
+                        <h4>Want to read more?</h4>
+                    <button class="buttonspine" onclick="window.location.href= 'skills.html';">Forward <br> Skills in South Wales!</button>
+                </div>
 
             </div>
         </div>
