--- a/skills.html
+++ b/skills.html
@@ -603,6 +603,11 @@
 
                         </p>
                     </div>
+                    <div class="pure-u-3-3 spine">
+                        <button class="buttonspine" onclick="window.location.href= 'housing.html';">Back <br> Housing in Cardiff!</button>
+                            <h4>Want to read more?</h4>
+                         <button class="buttonspine" onclick="window.location.href= 'big_issue.html';">Exploring Social Business: <br> The Big Issue </button>
+                     </div>
 
 
 
