--- a/big_issue.html
+++ b/big_issue.html
@@ -294,6 +294,11 @@
 
 
                 </div>
+                <div class="pure-u-3-3 spine">
+                    <button class="buttonspine" onclick="window.location.href= 'skills.html';">Back <br> Skills in South Wales!</button>
+                        <h4>Want to read more?</h4>
+                    <button class="buttonspine" onclick="window.location.href= 'suspended_coffees.html';">Exploring Social Business: <br> Suspended Coffees</button>
+                </div>
 
             </div>
         </div>
