--- a/stories.html
+++ b/stories.html
@@ -95,6 +95,11 @@
                         </p>
                     
                       </div>
+                    <div class="pure-u-3-3 spine">
+                       <button class="buttonspine" onclick="window.location.href= 'suspended_coffees.html';">Exploring Social Business: <br> Suspended Coffees</button>
+                         <h4>Want to read more?</h4>
+                       <button class="buttonspine" onclick="window.location.href= 'team.html';">Forward <br> Meet the Team!</button>
+                    </div>
         </div>
            
 
