--- a/team.html
+++ b/team.html
@@ -132,6 +132,11 @@
 
             </div>
         </div>
+                <div class="pure-u-3-3 spine">
+                    <button class="buttonspine" onclick="window.location.href= 'stories.html';">Profiles : <br> Meet Cardiff!</button>
+                        <h4>Want to read more?</h4>
+                    <button class="buttonspine" onclick="window.location.href= 'index.html';">Foward<br> To the home page</button>
+                </div>        
     </div>
     <script src='JS/menutoggle.js'></script>
 
