--- a/housing.html
+++ b/housing.html
@@ -73,6 +73,8 @@
         <div id="main">
             <div class="header">
                 <h1>Homelessness</h1>
+                <h2><em>people at risk of rough sleeping</em></h2>
+                <p class="subtitle">Written by Hee-Eun Shin, additional reporting by Giovanna Coi, and Aleks Ford. </p>
             </div>
 
             <div class="content">
