--- a/relative_poverty.html
+++ b/relative_poverty.html
@@ -73,6 +73,7 @@
             <div class="header">
                 <h1>Poverty by the numbers</h1>
                 <h2>Facts and figures</h2>
+                <p class="subtitle">Written by Hee-Eun Shin, additional reporting by Giovanna Coi, and Aleks Ford. </p>
             </div>
 
             <div class="content">
