--- a/skills.html
+++ b/skills.html
@@ -542,8 +542,8 @@
                             Wales' difficulty in adjusting to a post coal-centric economy is still ongoing. According
                             to a 2008 <a href='https://www.channel4.com/media/c4-news/pdf/coalfields.pdf'
                                 target='_blank'> study </a>-
-                            after a twenty-year period (1981-2004) of the 27,200 coal jobs (held by men only)
-                            were replaced by only 5,200 non-coal jobs. A further study by Sheffield Hallum
+                            after a twenty-year period (1981-2004) of the 27,200 coal jobs lost (held by men only)
+                            only 5,200 non-coal jobs replaced them. A further study by Sheffield Hallum
                             University found that between 2008 and 2012 the job replacement rate contained
                             within the <a
                                 href='https://www.nmrs.org.uk/mines-map/coal-mining-in-the-british-isles/swales/%E2%80%9D'
