--- a/skills.html
+++ b/skills.html
@@ -73,7 +73,7 @@
             <div class="header">
                 <h1>Skills and Education</h1>
                 <h2><em>Cardiff, a capital in stasis.</em></h2>
-                <p class="subtitle">Written by Aleks Ford, additional research by Giovanna Coi, and Hee-Eun Shin.  </p>
+                <p class="subtitle">Written by Aleks Ford, additional reporting by Giovanna Coi, and Hee-Eun Shin.  </p>
             </div>
 
             <div class="content">
