--- a/relative_poverty.html
+++ b/relative_poverty.html
@@ -344,9 +344,9 @@
 
                 </div>
             <div class="pure-u-3-3 spine">
-                <button class="buttonspine" onclick="window.location.href= 'index.html';">Back <br> To the homepage!</button>
+                <button class="buttonspine" onclick="window.location.href= 'index.html';">Back<br>To the homepage</button>
                 <h4>Want to read more?</h4>
-                <button class="buttonspine" onclick="window.location.href= 'housing.html';">Forward <br> Housing in Cardiff!</button>
+                <button class="buttonspine" onclick="window.location.href= 'housing.html';">Forward <br>Housing in Cardiff</button>
                 
             </div>
 
