--- a/housing.html
+++ b/housing.html
@@ -73,7 +73,7 @@
         <div id="main">
             <div class="header">
                 <h1>Homelessness</h1>
-                <h2><em>people at risk of rough sleeping</em></h2>
+                <h2><em>People at risk of rough sleeping</em></h2>
                 <p class="subtitle">Written by Hee-Eun Shin, additional reporting by Giovanna Coi, and Aleks Ford. </p>
             </div>
 
@@ -210,9 +210,9 @@
                     </p>
                 </div>
                 <div class="pure-u-3-3 spine">
-                    <button class="buttonspine" onclick="window.location.href= 'relative_poverty.html';">Back <br> Check the data!</button>
+                    <button class="buttonspine" onclick="window.location.href= 'relative_poverty.html';">Back <br> Check the data</button>
                         <h4>Want to read more?</h4>
-                    <button class="buttonspine" onclick="window.location.href= 'skills.html';">Forward <br> Skills in South Wales!</button>
+                    <button class="buttonspine" onclick="window.location.href= 'skills.html';">Forward <br> Skills in South Wales</button>
                 </div>
 
             </div>
