--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="pure-u-3-3 spine">
                 <button class="buttonspine" onclick="window.location.href= 'team.html';">Back<br>Meet the team!</button>
                     <h4>Want to read more?</h4>
-                <button class="buttonspine" onclick="window.location.href= 'relative_poverty.html';">Forward<br>Check the data!</button>
+                <button class="buttonspine" onclick="window.location.href= 'relative_poverty.html';">Forward<br>Check the data</button>
         </div>
             
         </div>
