--- a/housing.html
+++ b/housing.html
@@ -74,7 +74,7 @@
             <div class="header">
                 <h1>Homelessness</h1>
                 <h2><em>People at risk of rough sleeping</em></h2>
-                <p class="subtitle">Written by Hee-Eun Shin, additional reporting by Giovanna Coi, and Aleks Ford. </p>
+                <p class="subtitle">Written by Hee-Eun Shin, additional reporting by Giovanna Coi, and Aleks Ford.<br>Graphics by Giovanna Coi.</p>
             </div>
 
             <div class="content">
