--- a/relative_poverty.html
+++ b/relative_poverty.html
@@ -133,6 +133,7 @@
                     <p>Use the filters below to explore the data on our page.</p>
                     <p>If you want to know more about the data and how to read it, click <a href='#dataGuide'
                             class='menu'>here</a>.</p>
+                    <p>You can find additional sources and analysis on our <a href='https://github.com/gi-coi/trapped-in-poverty/tree/master/data_analysis' target='_blank'>GitHub repository</a>.</p>
                 </div>
                 <div class='pure-u-3-3'>
                     <div class='filter pure-u-3-3'>
